--- a/core/templates/inc/header.html
+++ b/core/templates/inc/header.html
@@ -2,6 +2,12 @@
 
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+        <meta name="keywords" content="{% block keywords %} {% endblock %} "/>
+        <title>恒心教育咨询有限公司 {% block title %}{% endblock %}</title>
+        <link href="/css/bootstrap.css" />
+        <script src="" />
 
     </head>
     <body>
