--- a/core/templates/inc/header.html
+++ b/core/templates/inc/header.html
@@ -2,15 +2,19 @@
 
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta name="keywords" content="{% block keywords %} {% endblock %} "/>
         <title>恒心教育咨询有限公司 {% block title %}{% endblock %}</title>
-        <link href="/css/bootstrap.css" />
-        <script src="" />
+        <link href="/static/css/bootstrap.css"  rel='stylesheet' type='text/css'/>
+        <script src="/static/js/jquery-3.11.min.js" ></script>
 
     </head>
     <body>
+            wocao
+        {% block content %}
+
+        {% endblock %}
 
     </body>
 </html>
