--- a/core/templates/inc/header.html
+++ b/core/templates/inc/header.html
@@ -7,11 +7,21 @@
         <meta name="keywords" content="{% block keywords %} {% endblock %} "/>
         <title>恒心教育咨询有限公司 {% block title %}{% endblock %}</title>
         <link href="/static/css/bootstrap.css"  rel='stylesheet' type='text/css'/>
+        <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
         <script src="/static/js/jquery-3.11.min.js" ></script>
+        <script src="/static/js/bootstrap.js" ></script>
 
     </head>
     <body>
-            wocao
+        <div class="header-contact">
+            <div class="call">
+                Call us: 15984223901
+            </div>
+
+            <div class="call">
+                Email us: 418586403@qq.com
+            </div>
+        </div>
         {% block content %}
 
         {% endblock %}
