--- a/core/templates/inc/header.html
+++ b/core/templates/inc/header.html
@@ -15,13 +15,14 @@
     <body>
         <div class="header-contact">
             <div class="call">
-                Call us: 15984223901
+                <label class="label-center">Call us: 15984223901</label>
             </div>
 
-            <div class="call">
-                Email us: 418586403@qq.com
+            <div class="email">
+                <label class="label-center">Email us: 418586403@qq.com</label>
             </div>
         </div>
+
         {% block content %}
 
         {% endblock %}
