--- a/core/templates/inc/header.html
+++ b/core/templates/inc/header.html
@@ -22,7 +22,34 @@
                 <label class="label-center">Email us: 418586403@qq.com</label>
             </div>
         </div>
-
+<header class="navbar navbar-static-top bs-docs-nav" id="top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a href="../" class="navbar-brand">Bootstrap</a>
+    </div>
+    <nav id="bs-navbar" class="collapse navbar-collapse pull-right">
+      <ul class="nav navbar-nav">
+        <li>
+          <a >起步</a>
+        </li>
+        <li class="active">
+          <a >全局 CSS 样式</a>
+        </li>
+        <li>
+          <a >组件</a>
+        </li>
+        <li>
+          <a >JavaScript 插件</a>
+        </li>
+        <li>
+          <a >定制</a>
+        </li>
+        <li><a >网站实例</a></li>
+      </ul>
+      
+    </nav>
+  </div>
+</header>
         {% block content %}
 
         {% endblock %}
