--- a/core/templates/inc/header.html
+++ b/core/templates/inc/header.html
@@ -22,34 +22,42 @@
                 <label class="label-center">Email us: 418586403@qq.com</label>
             </div>
         </div>
-<header class="navbar navbar-static-top bs-docs-nav" id="top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a href="../" class="navbar-brand">Bootstrap</a>
-    </div>
-    <nav id="bs-navbar" class="collapse navbar-collapse pull-right">
-      <ul class="nav navbar-nav">
-        <li>
-          <a >起步</a>
-        </li>
-        <li class="active">
-          <a >全局 CSS 样式</a>
-        </li>
-        <li>
-          <a >组件</a>
-        </li>
-        <li>
-          <a >JavaScript 插件</a>
-        </li>
-        <li>
-          <a >定制</a>
-        </li>
-        <li><a >网站实例</a></li>
-      </ul>
-      
-    </nav>
-  </div>
-</header>
+        <div class ="header">
+            <div class="logo"></div>
+            <div class="logo-font">恒心前途</div>
+            <div class="nav">
+                <ul class ="navbar">
+                    <li>
+                        <a href="/">首页</a>
+                    </li>
+                    <li>
+                        <a href="/">学历学位认证</a>
+                    </li>
+                    <li>
+                        <a href="/">留学教育咨询</a>
+                    </li>
+                    <li>
+                        <a href="/">海外课程辅导</a>
+                    </li>
+                    <li>
+                        <a href="/">海归职业规划</a>
+                    </li>
+                    <li>
+                        <a href="/">创业贷款申请</a>
+                    </li>
+                    <li>
+                        <a href="/">工作签证申请</a>
+                    </li>
+                    <li>
+                        <a href="/">行业资讯</a>
+                    </li>
+                    <li>
+                        <a href="/">关于恒心</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
         {% block content %}
 
         {% endblock %}
