--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -34,3 +34,31 @@ body{
     text-align: center;
     /*border-right: 3px solid #e4e4e4;*/
 }
+
+.header{
+    width: 100%;
+    height:114px;
+    /*background: rgba(234,234,234,0.1);*/
+    background: #FDFDFD;
+
+}
+.logo{
+    float:left;
+    width:120px;
+    height:66px;
+    margin-top: 30px;
+}
+
+.logo-font{
+    float:left;
+    width:121px;
+    margin-top:30px;
+}
+
+.navbar{
+
+}
+
+.nav{
+
+}
