style.css renamed to frontstyle.css

--- a/core/templates/inc/header.html
+++ b/core/templates/inc/header.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="{% block keywords %} {% endblock %} "/>
         <title>恒心教育咨询有限公司 {% block title %}{% endblock %}</title>
         <link href="/static/css/bootstrap.css"  rel='stylesheet' type='text/css'/>
-        <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
+        <link href="/static/css/frontstyle.css" rel="stylesheet" type="text/css" />
         <script src="/static/js/jquery-3.11.min.js" ></script>
         <script src="/static/js/bootstrap.js" ></script>
 
