--- a/core/templates/inc/header.html
+++ b/core/templates/inc/header.html
@@ -26,7 +26,7 @@
             <div class="logo"></div>
             <div class="logo-font">恒心前途</div>
             <div class="nav">
-                <ul class ="navbar">
+                <ul class ="menunavbar">
                     <li>
                         <a href="/">首页</a>
                     </li>
