--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -1,5 +1,191 @@
 {% extends 'inc/header.html' %}
 
+{% block head %}
+    <link rel="stylesheet" href="/static/css/public.css"/>
+    <link rel="stylesheet" href="/static/css/css.css"/>
+
+{#    <script type="text/javascript" src="/static/js/jquery-1.8.3.min.js"></script>#}
+    <script type="text/javascript" src="/static/js/js.js"></script>
+{% endblock %}
+
 {% block content %}
-    
+
+<div class="bannerbox">
+    <div class="navc">
+        <dl>
+            <dd class=""></dd>
+            <dd class=""></dd>
+            <dd class=""></dd>
+        </dl>
+    </div>
+    <ul>
+        <li class="fst-li">
+            <div class="containt-div">
+               <div class="baner-01-a"><img src="/static/images/banner-01-a.png" alt=""/></div>
+               <div class="baner-01-b"><img src="/static/images/banner-01-b.png" alt=""/></div>
+{#                <div class="baner-01-b"><img src="/static/images/banner-01-c.png" alt=""/></div>#}
+            </div>
+        </li>
+        <li class="sec-li">
+            <div class="containt-div">
+                <div class="banner2-02"><img src="/static/images/banner2-02.png" alt=""/></div>
+                <div class="banner2-01"><img src="/static/images/banner2-01.png" alt=""/></div>
+                <div class="banner2-03"><img src="/static/images/banner2-03.png" alt=""/></div>
+            </div>
+        </li>
+        <li class="third-li">
+            <div class="containt-div">
+                <div class="banner3-01"><img src="/static/images/banner3-01.png" alt=""/></div>
+                <div class="banner3-02"><img src="/static/images/banner3-02.png" alt=""/></div>
+                <div class="banner3-03"><img src="/static/images/banner3-03.png" alt=""/></div>
+                <div class="banner3-04"><img src="/static/images/banner3-04.png" alt=""/></div>
+            </div>
+        </li>
+    </ul>
+</div>
+<div class="main-title">
+    Lorem Ipsum dolor
+</div>
+<div class="grey-line">
+
+</div>
+<div class="grey-word">
+    Lorem ipsum dolor sit amet, consectetur
+</div>
+
+<div class="container midpart">
+    <div class="col-xs-1">
+        <img src="/static/images/1.jpg" style="width:100%">
+    </div>
+    <div class="col-xs-5">
+          <div class="midtitle">
+                学历学位认证
+          </div>
+          <div class="midcontent">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+          </div>
+    </div>
+    <div class="col-xs-1">
+        <img src="/static/images/1.jpg" style="width:100%">
+    </div>
+    <div class="col-xs-5">
+          <div class="midtitle">
+                留学教育咨询
+          </div>
+          <div class="midcontent">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+          </div>
+    </div>
+
+    <div class="col-xs-1 middiv">
+        <img src="/static/images/1.jpg" style="width:100%">
+    </div>
+    <div class="col-xs-5 middiv">
+          <div class="midtitle">
+                海外课程辅导
+          </div>
+          <div class="midcontent">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+          </div>
+    </div>
+    <div class="col-xs-1 middiv">
+        <img src="/static/images/1.jpg" style="width:100%">
+    </div>
+    <div class="col-xs-5 middiv">
+          <div class="midtitle">
+                海归职业规划
+          </div>
+          <div class="midcontent">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+          </div>
+    </div>
+    <div class="col-xs-1 middiv">
+        <img src="/static/images/1.jpg" style="width:100%">
+    </div>
+    <div class="col-xs-5 middiv">
+          <div class="midtitle">
+                创业贷款申请
+          </div>
+          <div class="midcontent">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+          </div>
+    </div>
+    <div class="col-xs-1 middiv">
+        <img src="/static/images/1.jpg" style="width:100%">
+    </div>
+    <div class="col-xs-5 middiv">
+          <div class="midtitle">
+                工作签证申请
+          </div>
+          <div class="midcontent">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+          </div>
+    </div>
+</div>
+
+<div class="pic-content">
+    <div class="fourpic">
+
+        <div class="pic">
+            <div class="pic-head">
+                <img src="/static/images/2.jpg" style="width: 100%;height:100%">
+            </div>
+            <div class="pic-foot">
+                学历认证
+            </div>
+        </div>
+
+        <div class="pic" style="margin-left:67px;">
+            <div class="pic-head">
+                <img src="/static/images/2.jpg" style="width: 100%;height:100%">
+            </div>
+            <div class="pic-foot">
+                教育咨询
+            </div>
+        </div>
+
+        <div class="pic" style="margin-left:67px;">
+            <div class="pic-head">
+                <img src="/static/images/2.jpg" style="width: 100%;height:100%">
+            </div>
+            <div class="pic-foot">
+                课程辅导
+            </div>
+        </div>
+        <div class="pic" style="margin-left:66px;">
+            <div class="pic-head">
+                <img src="/static/images/2.jpg" style="width: 100%;height:100%">
+            </div>
+            <div class="pic-foot">
+                移民落户
+            </div>
+        </div>
+    </div>
+    <div class="threepic">
+        <div class="pic" >
+            <div class="pic-head">
+                <img src="/static/images/2.jpg" style="width: 100%;height:100%">
+            </div>
+            <div class="pic-foot">
+                职业规划
+            </div>
+        </div>
+        <div class="pic" style="margin-left:66px;">
+            <div class="pic-head">
+                <img src="/static/images/2.jpg" style="width: 100%;height:100%">
+            </div>
+            <div class="pic-foot">
+                创业贷款
+            </div>
+        </div>
+        <div class="pic" style="margin-left:66px;">
+            <div class="pic-head">
+                <img src="/static/images/2.jpg" style="width: 100%;height:100%">
+            </div>
+            <div class="pic-foot">
+                行业资讯
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
