--- a/core/static/css/frontstyle.css
+++ b/core/static/css/frontstyle.css
@@ -58,7 +58,7 @@ body{
     margin-top:30px;
 }
 
-.nav{
+.navli{
     float: left;
     display: inline-block;
     margin-left: 40px;
@@ -87,4 +87,157 @@ body{
 .menunavbar li a:hover{
     border-bottom: 4px solid #ef4238;
     color: #ef4238;
+}
+
+
+.main-title{
+    color:#DC473C;
+    height:132px;
+    font-size:35px;
+    font-family: "Microsoft YaHei";
+    text-align:center;
+    line-height: 220px;
+}
+
+.grey-line{
+    width:35px;
+    border-bottom: 2px solid #AEAEAE;
+    margin: 22px auto;
+}
+
+.grey-word{
+    margin: 18px auto;
+    width:100%;
+    height:35px;
+    font-size:25px;
+    text-align: center;
+    color:#333333;
+    line-height:20px;
+}
+
+.midpart{
+    margin-top:64px;
+    font-size:18px;
+}
+
+.middiv{
+    margin-top: 24px;
+}
+.midcontent{
+    margin-top:40px;
+    line-height:40px;
+}
+
+.pic-content{
+    margin-top:60px;
+    background: #F6F6F6;
+    height:986px;
+    width:100%;
+    /*margin: 60px auto;*/
+}
+
+.fourpic{
+    margin:0 auto;
+    height:313px;
+    width:1400px;
+}
+.pic{
+    float: left;
+    width:300px;
+    height:281px;
+    margin-top: 100px;
+}
+.pic-head{
+    width:100%;
+    height:205px;
+
+}
+
+.pic-foot{
+    height:76px;
+    background:#393C4B;
+    text-align: center;
+    color:#FFFFFF;
+    font-size: 18px;
+    line-height: 75px;
+    width:100%;
+}
+
+.threepic{
+    margin:50px auto;
+    height:313px;
+    width:1033px;
+}
+
+.footer{
+    background: #2C303C;
+    color:#FFFfff;
+}
+.foot-header{
+    margin-top:90px;
+    font-size:20px;
+    font-family: "Microsoft YaHei";
+}
+.foot1-header{
+    font-size:18px;
+    line-height:30px;
+    margin-top: 20px;
+}
+
+.foot1-content{
+    margin-top:10px;
+    font-family: "Microsoft YaHei";
+    font-size:15px;
+}
+
+.foot-zixun{
+    margin-top: 20px;
+}
+
+
+.foot-tags{
+    width:80px;
+    text-align: center;
+    height:34px;
+    /*box-sizing: border-box;*/
+    /*margin-top: auto;*/
+    line-height: 30px;
+    font-family: "Microsoft YaHei";
+    text-decoration:none;
+    display:inline-block;
+    font-size: 12px;
+    background: #242633;
+    margin-top: 20px;
+    color: #797979;
+}
+
+.foot-focus{
+    margin-top:30px;
+    font-size:20px;
+    font-family: "Microsoft YaHei";
+}
+
+.foot-container{
+    width:90%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    /*background: #242633;*/
+}
+
+.pic-container{
+    width:80%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.pic1-container{
+    width:60%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
