--- a/core/templates/backend/carousel.html
+++ b/core/templates/backend/carousel.html
@@ -1,5 +1,6 @@
 {% extends "backend/master_admin.html" %}{% block ti %}{% endblock %}
 {% block linkcss %}{% endblock %}
+{% load poll_extras %}
 {% load staticfiles %}
 {% block body %}
     <!--主体开始-->
@@ -23,68 +24,37 @@
 
         <!--内容开始-->
         <div class="col-sm-11  col-md-12 col-lg-12 lefrgit">
-            <h1 class="page-header">&nbsp;
+            <h1 class="page-header"><div role="group" class="btn-group">
+                <a onclick="$('input[name=checkbox]').prop('checked',!$(this).prop('checked'));$(this).prop('checked',!$(this).prop('checked'));" class="btn btn-default" draggable="false">全选</a>
+                <a onclick="$('input[name=checkbox]').each(function(){if(this.checked){this.checked=false;}else{this.checked=true;}});" class="btn btn-default" draggable="false">反选</a>
+                <a onclick="postdel()" class="btn btn-danger" draggable="false">删除</a>
+            </div>
 
-            <div role="toolbar" class="btn-toolbar operation pull-right">
-                        <div role="group" class="btn-group">
-                            <a onclick="" class="btn btn-primary" draggable="false" data-target="#add" data-toggle="modal">新增</a>
-                        </div>
+                <div role="toolbar" class="btn-toolbar operation pull-right">
+                    <div role="group" class="btn-group">
+                        <a onclick="" class="btn btn-primary" draggable="false" data-target="#add" data-toggle="modal">新增</a>
                     </div>
+                </div>
             </h1>
             <div class="table-responsive">
                 <table class="table table-striped table-hover table-bordered">
                     <thead>
                     <tr>
-{#                        <th><input type="checkbox" value="" name="checkbox[]" class="input-control"></th>#}
-                        {#                            <th>企业代码</th>#}
-                        <th>企业名称</th>
-                        {#                            <th>企业IT系统类型</th>#}
-                        {#                            <th>办公地址</th>#}
-                        <th>办公电话</th>
-                        <th>传真</th>
-                        {#                            <th>开户行</th>#}
-                        {#                            <th>帐号</th>#}
-                        {#                            <th>税号</th>#}
-                        <th>联系人</th>
-                        <th>电话</th>
-                        {#                            <th>邮箱</th>#}
-                        <th>财务负责人</th>
-                        <th>联系电话</th>
-                        {#                            <th>管理员</th>#}
-                        {#                            <th>管理员电话</th>#}
-                        {#                            <th>管理邮箱</th>#}
-                        <th>登记日期</th>
-                        <th>更多</th>
+                        <th class="center">\</th>
+                        <th class="center">标题</th>
+                        <th class="center">图片</th>
+                        <th class="center">文字</th>
+                        <th class="center">链接地址</th>
+                        <th class="center">修改时间</th>
+                        <th class="center">更多</th>
 
-                        {#                            <th>备注</th>#}
                     </tr>
                     </thead>
-                    <tbody>
-                    {% if CPNs != None %}
-                        {% for cpn in CPNs %}
-                            <tr>
-{#                                <td><input type="checkbox" value="" name="checkbox[]" class="input-control"></td>#}
-                                {#                            <td class="article-title">1001</td>#}
-                                <td>{{ cpn.Name }}</td>
-                                {#                            <td>成都市二环路东二段</td>#}
-                                {#                            <td>028-85689568</td>#}
-                                <td>{{ cpn.Tel }}</td>
-                                <td>{{ cpn.Fax }}</td>
-                                {#                            <td>成都银行</td>#}
-
-                                {#                            <td>6525956865214587</td>#}
-                                <td>{{ cpn.Lnkr }}</td>
-                                <td>{{ cpn.LnkPhn }}</td>
-                                {#                            <td>18888888@qq.com</td>#}
-                                <td>{{ cpn.Cfo }}</td>
-                                <td>{{ cpn.CfoPhn }}</td>
-
-                                <td>{{ cpn.OpnDt }}</td>
-                                <td><a class="btn btn-primary btn-xs btn-github" data-target="#update_{{ cpn.id }}" data-toggle="modal" href="">查看详情</a></td>
-
-                            </tr>
-                        {% endfor %}
-                    {% endif %}
+                    <tbody id="tbody_carousel">
+{#                                            {% for c in cs %}#}
+{##}
+{#{% table_carousels title=c.title img=c.img caption=c.caption link=c.link dimdate=c.dimDate%}#}
+{#                                            {% endfor %}#}
                     </tbody>
                 </table>
             </div>
@@ -219,7 +189,7 @@
                                     <button data-dismiss="modal" class="btn btn-default" type="button">关闭</button>
                                     <button class="btn btn-primary" type="submit">保存</button>
                                 </div>
-</form>
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -236,7 +206,7 @@
                         </div>
                         <div class="modal-body">
                             <form class="form-horizontal" method="post" id="addform" action="/r/addcarousel" enctype="multipart/form-data">
-{% csrf_token %}
+                                {% csrf_token %}
                                 <div class="form-group">
                                     <label class="control-label col-xs-2 col-sm-2 no-padding-right">轮播标题:</label>
                                     <div class="col-xs-9 col-sm-9">
@@ -254,85 +224,145 @@
 
 
                                 </div>
-<div class="space-2"></div>
+                                <div class="space-2"></div>
                                 <div class="form-group">
-                                <label class="control-label col-xs-2 col-sm-2 no-padding-right">链接地址:</label>
+                                    <label class="control-label col-xs-2 col-sm-2 no-padding-right">链接地址:</label>
                                     <div class="col-xs-9 col-sm-9">
                                         <div class="clearfix"><input type="text" name="link" placeholder="(http://www.xxx.com/xxx)" class="col-xs-12 col-sm-12"></div>
                                     </div>
-                                    </div>
+                                </div>
                                 <div class="form-group">
-															<div class="col-xs-12">
-																<input type="file" name="img" id="id-input-file-2" />
-															</div>
-														</div>
+                                    <div class="col-xs-12">
+                                        <input type="file" name="img" id="id-input-file-2" />
+                                    </div>
+                                </div>
 
-                        <div class="modal-footer">
-                            <button data-dismiss="modal" class="btn btn-default" type="button">关闭</button>
-                            <input type="button" onclick="su()" class="btn btn-primary" value="保存"/>
-                        </div>
+                                <div class="modal-footer">
+                                    <button data-dismiss="modal" class="btn btn-default" type="button">关闭</button>
+                                    <input type="button" onclick="su()" class="btn btn-primary" value="保存"/>
+                                </div>
                                 <script>
+                                    function getCookie(name) {
+    var cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+        var cookies = document.cookie.split(';');
+        for (var i = 0; i < cookies.length; i++) {
+            var cookie = jQuery.trim(cookies[i]);
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+}
+var csrftoken = getCookie('csrftoken');
+                                    function postdel() {
+                                        if(confirm('确定删除吗')){
+                                            var s=[];
+                                            $('input:checked[name=checkbox]').each(function (index,item) {
+                                                //if($(item).checked==true) {
+                                                s .push ($(item).val());
+                                                //}
+                                            });
+                                            $.post('/r/delcarousel',{'ids':s,'csrfmiddlewaretoken':csrftoken},function (data) {
+                                                data=JSON.parse(data);
+                                                $.gritter.add({
+                                                    // (string | mandatory) the heading of the notification
+                                                    title: '成功',
+                                                    // (string | mandatory) the text inside the notification
+                                                    text: data.msg,
+                                                    class_name: 'gritter-success'
+                                                });
+                                                ajax_refresh_table();
+                                            })
+                                        }}
 
                                     function su() {
 
 
-                                    NProgress.start();
-                var formData = new FormData($( "#addform" )[0]);
-                $.ajax({
-                    url: "/r/addcarousel",
-                    type: "POST",
-                    data: formData,
-                    /**
-                    *必须false才会自动加上正确的Content-Type
-                    */
-                    enctype:"multipart/form-data",
-                    contentType: false,
-                    /**
-                    * 必须false才会避开jQuery对 formdata 的默认处理
-                    * XMLHttpRequest会对 formdata 进行正确的处理
-                    */
-                    processData: false,
-                    success: function (data) {
-                        data=JSON.parse(data)
-                        if (data.status == "200") {
-                            alert("上传成功！");
-                        }
-                        if (data.status == "500") {
-                            alert(data.msg);
-                        }
-                        NProgress.done();
-                    },
-                    error: function () {
-                        alert("上传失败！");
-                        NProgress.done();
-                    }
-                });
+                                        NProgress.start();
+                                        var formData = new FormData($( "#addform" )[0]);
+                                        $.ajax({
+                                            url: "/r/addcarousel",
+                                            type: "POST",
+                                            data: formData,
+                                            /**
+                                             *必须false才会自动加上正确的Content-Type
+                                             */
+                                            enctype:"multipart/form-data",
+                                            contentType: false,
+                                            /**
+                                             * 必须false才会避开jQuery对 formdata 的默认处理
+                                             * XMLHttpRequest会对 formdata 进行正确的处理
+                                             */
+                                            processData: false,
+                                            success: function (data) {
+                                                data=JSON.parse(data);
+                                                if (data.status == "200") {
+                                                    $.gritter.add({
+                                                        // (string | mandatory) the heading of the notification
+                                                        title: '成功上传',
+                                                        // (string | mandatory) the text inside the notification
+                                                        text: '成功添加新的轮播项。'+data.msg,
+                                                        class_name: 'gritter-success'
+                                                    });
+                                                    ajax_refresh_table();
+                                                }
+                                                if (data.status == "500") {
+                                                    $.gritter.add({
+                                                        // (string | mandatory) the heading of the notification
+                                                        title: '失败',
+                                                        // (string | mandatory) the text inside the notification
+                                                        text: data.msg,
+                                                        class_name: 'gritter-warning'
+                                                    });
+                                                }
+                                                NProgress.done();
+                                            },
+                                            error: function () {
+                                                alert("上传失败！");
+                                                NProgress.done();
+                                            }
+                                        });
 
-}</script>
-                        </form>
+                                    }
+                                </script>
+                            </form>
+                        </div>
                     </div>
                 </div>
-            </div>
 
+
+            </div>
+            <!--内容结束-->
 
         </div>
-        <!--内容结束-->
+        <script>
+            $('#li_carousel').attr('class','active');
+            $('#id-input-file-2').ace_file_input({
+                no_file:'无文件 ...',
+                btn_choose:'选择',
+                btn_change:'重选',
+                droppable:false,
+                onchange:null,
+                thumbnail:false //| true | large
+                //whitelist:'gif|png|jpg|jpeg'
+                //blacklist:'exe|php'
+                //onchange:''
+                //
+            });
+            function  ajax_refresh_table() {
+$('#tbody_carousel').html('');
+NProgress.start();
+                $.get('/r/getcarousel',function (data) {
+                    $('#tbody_carousel').append(data);
+                    NProgress.done();
+            });
+            }
+ajax_refresh_table();
 
-    </div>
-    <script>
-    $('#li_carousel').attr('class','active');
-$('#id-input-file-2').ace_file_input({
-					no_file:'无文件 ...',
-					btn_choose:'选择',
-					btn_change:'重选',
-					droppable:false,
-					onchange:null,
-					thumbnail:false //| true | large
-					//whitelist:'gif|png|jpg|jpeg'
-					//blacklist:'exe|php'
-					//onchange:''
-					//
-				});
-    </script>
-    <!--主体结束-->
+        </script>
+        <!--主体结束-->
 {% endblock %}
