--- a/core/templates/backend/master_admin.html
+++ b/core/templates/backend/master_admin.html
@@ -22,6 +22,8 @@
 		<link rel="stylesheet" href="/static/css/daterangepicker.min.css" />
 		<link rel="stylesheet" href="/static/css/bootstrap-datetimepicker.min.css" />
 		<link rel="stylesheet" href="/static/css/bootstrap-colorpicker.min.css" />
+<link rel="stylesheet" href="/static/css/colorbox.min.css" />
+<link rel="stylesheet" href="/static/css/jquery.gritter.min.css" />
 		<!-- page specific plugin styles -->
 
 		<!-- text fonts -->
@@ -449,6 +451,14 @@
 
 <li id="li_carousel" class=""><a href="/r/carousel"><i class="menu-icon fa fa-picture-o"></i><span class="menu-text"> 首页轮播设置 </span></a></li>
                         <li id="li_content" class="" ><a href="/r/content"><i class="menu-icon fa fa-pencil-square-o"></i><span class="menu-text">栏目内容发布</span></a></li>
+                    <li id="li_gallery" class="">
+						<a href="/r/gallery">
+							<i class="menu-icon fa fa-picture-o"></i>
+							<span class="menu-text"> 图片库 </span>
+						</a>
+
+						<b class="arrow"></b>
+					</li>
 				</ul><!-- /.nav-list -->
 
 				<div class="sidebar-toggle sidebar-collapse" id="sidebar-collapse">
@@ -462,7 +472,9 @@
         </div>
     <a href="#" id="btn-scroll-up" class="btn-scroll-up btn btn-sm btn-inverse"><i class="icon-double-angle-up icon-only bigger-110"></i></a>
 </div>
-
+<script src="/static/js/jquery.gritter.min.js"></script>
+<script src="/static/js/jquery.cookie.js"></script>
+<script src="/static/js/jquery.colorbox.min.js"></script>
 {#		<script src="/static/js/chosen.jquery.min.js"></script>#}
 {#		<script src="/static/js/spinbox.min.js"></script>#}
 {#		<script src="/static/js/bootstrap-datepicker.min.js"></script>#}
