--- a/core/static/css/frontstyle.css
+++ b/core/static/css/frontstyle.css
@@ -138,7 +138,6 @@ body{
 
 .fourpic{
     margin:0 auto;
-    height:313px;
     width:1400px;
 }
 .pic{
@@ -164,8 +163,7 @@ body{
 }
 
 .threepic{
-    margin:50px auto;
-    height:313px;
+    margin-top:50px;
     width:1033px;
 }
 
@@ -240,4 +238,163 @@ body{
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+}
+
+.triangle{
+    float: none;
+    width:60%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 100px;
+}
+
+.redbar{
+    background: #DB4C44;
+    margin: 0 auto;
+    width:100%;
+    height:274px;
+}
+
+.redbar-title1{
+    font-size: 28px;
+    font-family: Arial;
+    margin-top: 40px;
+    color:#FFFFFF;
+}
+
+.redbar-title2{
+    font-size: 40px;
+    font-family: Arial;
+    margin-top: 20px;
+    letter-spacing:3px;
+    color:#FFFFFF;
+}
+.redbar-content{
+    font-size: 30px;
+    font-family: Arial;
+    margin-top: 20px;
+    color:#FFFFFF;
+    line-height: 40px;
+}
+
+.whitebar{
+    background: #FFFFFF;
+    margin: 0 auto;
+    width:100%;
+    height:934px;
+}
+
+
+.education-carsoul{
+    background: #F9F9F9;
+    height: 900px;
+}
+
+.education-main{
+    width:80%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.education-block-head{
+    width:100%;
+    height:340px;
+    background: #000000;
+    margin-top: 20px;
+}
+.education-block-foot{
+    width:100%;
+    height:60px;
+    background: #555555;
+    color: #FFF;
+    margin-bottom:10px;
+
+}
+.education-block{
+    float:left;
+}
+
+.course-banner{
+    height:400px;
+    background:#f9f9f9;
+    width:100%;
+}
+
+
+.course-main{
+    width:80%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.course-block-head{
+    width:100%;
+    height:240px;
+    background: #000000;
+    margin-top: 20px;
+}
+
+.course-block-foot{
+    width:100%;
+    height:60px;
+    background: #555555;
+    color: #FFF;
+    margin-bottom:10px;
+
+}
+
+.aboutus-banner{
+    height:400px;
+    background:#f9f9f9;
+    width:100%;
+}
+
+.aboutus-main{
+    width:80%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.aboutus-img{
+    width:100%;
+    height:550px;
+    background:#f9f9f9;
+}
+.industry-banner{
+
+}
+
+.industry-banner-block{
+    background: #F9F9F9;
+    height:270px;
+    border-radius: 15px;
+}
+
+.industry-banner-img{
+    background: #000000;
+    /*width: 100%;*/
+    height: 80px;
+
+}
+
+.industry-block-head{
+    width:100%;
+    height:240px;
+    background: #000000;
+    margin-top: 20px;
+}
+.industry-block-foot{
+    width:100%;
+    height:60px;
+    background: #555555;
+    color: #FFF;
+    margin-bottom:10px;
 }
