--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -187,5 +187,39 @@
             </div>
         </div>
     </div>
+    <div class="clearfix">
+
+    </div>
+    <div class="triangle text-center" >
+        <img src="/static/images/triangle.png">
+    </div>
+
+</div>
+
+<div>
+    <div class="redbar">
+        <div class="container">
+            <p class="redbar-title1">Lorem ipsum dolor sit amet</p>
+            <p class="redbar-title2">学历认证</p>
+            <p class="redbar-content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+            </p>
+        </div>
+    </div>
+    <div class="whitebar">
+        <div class="container">
+            <div class="col-xs-5">
+                <p>学历认证</p>
+                <p>Lorem ipsum dolor sit amet, </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+            </div>
+            <div class="col-xs-7">
+                <img src="/static/images/2.jpg" style="width: 100%;height:100%">
+            </div>
+
+        </div>
+    </div>
+
 </div>
 {% endblock %}
